--- a/style/style.css
+++ b/style/style.css
@@ -20,9 +20,10 @@ body{
   box-sizing: border-box;
   margin: auto;
   width: 650px;
+  text-align: center;
 }
 .poster-content header{
-  text-align: center;
+  display: inline-block;
 }
 @font-face {
   font-family: avengersFont;
@@ -31,11 +32,26 @@ body{
 .poster-content header h1{
   color: #fff;
   font-size: 48px;
-  margin: 16px;
+  margin: 16px 8px 0;
   font-family: avengersFont;
 }
 .poster-content header h2{
   color: #fff;
   border-top: 2px solid #fff;
   border-bottom: 2px solid #fff;
+  margin-top: 0;
+  font-family: 'Audiowide', cursive;
+  letter-spacing: 1px;
+  font-size: 26px;
+}
+.poster-content iframe{
+  width: 100%;
+  height: 315px;
+  border: 2px solid #ddd;
+}
+.poster-content .release-date{
+  font-size: 18px;
+  color: #fff;
+  font-family: 'Audiowide', cursive;
+  margin-bottom: 8px;
 }
